--- a/stylehw2.css
+++ b/stylehw2.css
@@ -1,9 +1,24 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
+.box {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
+}
+
+html,
+body,
+header {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     font-family: 'montserrat',roboto;
 }
-header {
+header,
+body {
     width: 100%;
     height: 100%;
     background: #333;
@@ -35,14 +50,14 @@ header {
     position: absolute;
     height: 60px;
     width: 60px;
-    top: 10%;
+    top: 5%;
     left: 3%;
     z-index: 1000;
     cursor: pointer;
     border-radius: 50%;
     transition: all 0.2s ease-in-out;
     background: rgba(255,255,255,0.2);
-    // background: green;
+    // background: #25cbf5;
     // width: auto;
     // height: 50px;
     // overflow: hidden;
@@ -90,8 +105,9 @@ header {
 }
 
 nav {
-    background: #0288D1;
+    background: #25cbf5;
     position: absolute;
+    padding-top: 20%;
     top: 0;
     left: 0;
     height: 100%;
@@ -103,10 +119,11 @@ nav {
 }
 
 nav ul {
-    margin: 0;
+    margin-right: 10%;
     position: absolute;
-    top: 30%;
-    left: 30%;
+    top: 20%;
+    left: 20%;
+    padding-right: 20%;
   }
 
 nav li {
@@ -139,12 +156,33 @@ nav li {
     // opacity: 100;
     // animation: slideIn 0.6s cubic-bezier(.62,.04,.3,1.56);
     // animation-fill-mode: forwards;
-   width: 50%;
+   width: 500px;
     // transform:scale(1);
    opacity: 1;
 }
 
+#content-home {
+    color: #fff;
+    padding-top: 10%;
+    left: 50%;
+    text-align: center;
+    overflow: visible;
+}
 
+#content-answer {
+    background-color: #fff;
+    padding-top: 10%;
+    left: 50%;
+    text-align: center;
+}
+
+#footer {
+    position: absolute;
+    color: #fff;
+    padding-top: 50%;
+    width: 100%;
+    text-align: center;
+}
 
 p {
     display: inline-block;
@@ -168,3 +206,202 @@ p.wr3 {
     color: green;
     font-style: italic;
 }
+
+.about-col {
+    margin-bottom: 40px;
+}
+
+.about-col .fa {
+    width: 90px;
+    height: 90px;
+    line-height: 90px;
+    color: #666666;
+    border-radius: 50%;
+    background-color: #f5f4f2;
+    transition: 0.7s ease-in-out;
+}
+
+.about-col:hover .fa {
+    background-color: #25cbf5;
+    color: white;
+    transform: rotateY(360deg);
+}
+
+.icon {
+    display: inline-block;
+    font-size: 1.3em;
+    line-height: 1.42857;
+    width: 130px;
+    margin: 0 auto;
+    position: relative;
+    color: #25cbf5;
+}
+
+.section-padding {
+    padding-top: 60px;
+    padding-bottom: 50px;
+}
+
+#cta-1 {
+  background-color: #f5f4f2;
+  padding: 40px 0;
+
+}
+
+.block {
+  display: block;
+}
+
+.overlay {
+  background: rgba(255, 255, 255, 0.77);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.global-modal {
+  visibility: hidden;
+  padding-top: 10px;
+}
+
+.global-modal_contents {
+  background: #FFF;
+  -webkit-box-shadow: 0 0 8px 2px rgba(182, 182, 182, 0.75);
+  -moz-box-shadow: 0 0 8px 2px rgba(182,182,182, 0.75);
+  -o-box-shadow: 0 0 8px 2px rgba(182,182,182,0.75);
+  box-shadow: 0 0 8px 2px rgba(182, 182, 182, 0.75);
+  width: 50%;
+  position: absolute;
+  left: 42%;
+  margin-left: -16%;
+  top: 15%;
+  min-height: 650px;
+}
+    
+.global-modal-header{
+  border-bottom: 1px solid #ccc;
+}
+    
+.global-modal-header p{
+  color: #333;
+  text-align: left;
+   margin: 20px;
+}
+
+.global-modal p{
+  color: #333;
+  text-align: left;
+  left: 10px;
+}
+    
+.global-modal-header .mobile-close{
+  display: none;
+}
+
+    
+.global-modal-body{
+  color: #333;
+  width: 100%;
+  height: 225px;
+  position: relative;
+  top: 55px;
+  margin: 20px;
+}
+
+.global-modal_close {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  text-decoration: none;
+  display: none;
+}
+
+.global-modal-show {
+  visibility: visible;
+}
+
+.global-modal-transition {
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  -ms-transform: scale(0.7);
+  transform: scale(0.7);
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.global-modal-show .global-modal-transition {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
+}
+
+@media (max-width: 1139px){
+  .global-modal p{
+    text-align: center;
+    width: 100%;
+    display:block;
+    float: none;
+    margin: 0 auto;
+  }
+  .global-modal:after {
+    clear: both;
+    content: '';
+    display: table;
+  }
+}
+@media(max-width: 1027px){
+  .global-modal-header h3{
+    font-size: 18px;
+  }
+}
+@media (max-width : 767px) {
+  
+  .global-modal_contents {
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    margin: 0;
+  }
+  .global-modal-header h3{
+    font-size: 22px;
+  }
+  .global-modal-header .mobile-close{
+    display: block;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    curson: pointer;
+  }
+  .global-modal_close {
+    display: block;
+  }
+  
+  .global-modal-transition {
+    -webkit-transform: translateX(-0) translateY(150%);
+    -moz-transform: translateX(-0) translateY(150%);
+    -ms-transform: translateX(-0) translateY(150%);
+    transform: translateX(-0) translateY(150%);
+  }
+  
+}
+@media (max-width: 495px){
+  .global-modal-header h3{
+    font-size: 18px;
+  }
+}
+@media (max-width: 415px){
+  .global-modal-header h3{
+    font-size: 15px;
+  }
+} 
+
+
+
+
