--- a/style_answer.css
+++ b/style_answer.css
@@ -28,6 +28,11 @@ body {
 
 h1 {
     color: #25cbf5;
+    font-size: 42px;
+}
+
+h2 {
+    font-size: 24px;
 }
 
 .icon-1, .icon-2, .icon-3 {
@@ -183,7 +188,7 @@ nav li {
 #footer {
     position: absolute;
     color: #fff;
-    padding-top: 50%;
+    padding-top: 80%;
     width: 100%;
     text-align: center;
 }
